@@ -475,7 +475,8 @@ COPY_COMMON_OPTIONS = ['DELIMITER', 'QUOTE', 'ESCAPE', 'HEADER', 'NULL', 'DATETI
                        'MAXATTEMPTS', 'REPORTFREQUENCY', 'DECIMALSEP', 'THOUSANDSSEP', 'BOOLSTYLE',
                        'NUMPROCESSES', 'CONFIGFILE', 'RATEFILE']
 COPY_FROM_OPTIONS = ['CHUNKSIZE', 'INGESTRATE', 'MAXBATCHSIZE', 'MINBATCHSIZE', 'MAXROWS',
-                     'SKIPROWS', 'SKIPCOLS', 'MAXPARSEERRORS', 'MAXINSERTERRORS', 'ERRFILE', 'PREPAREDSTATEMENTS']
+                     'SKIPROWS', 'SKIPCOLS', 'MAXPARSEERRORS', 'MAXINSERTERRORS', 'ERRFILE', 'PREPAREDSTATEMENTS',
+                     'MAXINFLIGHTMESSAGES', 'MAXBACKOFFATTEMPTS', 'MAXPENDINGCHUNKS']
 COPY_TO_OPTIONS = ['ENCODING', 'PAGESIZE', 'PAGETIMEOUT', 'BEGINTOKEN', 'ENDTOKEN', 'MAXOUTPUTSIZE', 'MAXREQUESTS']
 
 
@@ -1893,7 +1894,15 @@ class Shell(cmd.Cmd):
                                     False if you don't mind shifting data parsing to the cluster. The cluster will also
                                     have to compile every batch statement. For large and oversized clusters
                                     this will result in a faster import but for smaller clusters it may generate
-                                    timeouts.
+                                    timeouts
+         MAXINFLIGHTMESSAGES=512  - the maximum number of messages not yet acknowledged by a replica, before the
+                                    back-off policy in worker processes kicks in
+         MAXBACKOFFATTEMPTS=32    - the maximum number of back-off attempts in worker processes. During each attempt,
+                                    if no replica with less than MAXINFLIGHTMESSAGES pending is found, there is a pause
+                                    in the worker process for an amount of time that is drawn at random between
+                                    1 and 2^num-attempts seconds
+         MAXPENDINGCHUNKS=24      - the maximum number of chunks not yet read by a working process, once this number
+                                    is reached, no new chunks are sent from the feeding process to the worker process
 
         Available COPY TO options and defaults:
 
