@@ -1,4 +1,5 @@
 3.0.5
+ * Improve backoff policy for cqlsh COPY FROM (CASSANDRA-11320)
  * Upgrade ohc to 0.4.3
  * Enable SO_REUSEADDR for JMX RMI server sockets (CASSANDRA-11093)
  * Allocate merkletrees with the correct size (CASSANDRA-11390)
